--- a/dashboard/sentinel-dashboard.service
+++ b/dashboard/sentinel-dashboard.service
@@ -14,7 +14,7 @@ Environment="DB_NAME=sentinel"
 Environment="DB_USER=sentinel"
 Environment="DB_PASSWORD=Tvifkrc+KYdUZaIoKdT4t0y8aw9IlKZN"
 Environment="SENTINEL_API_KEY=3be27fb56730c0f6c112326da803b0af"
-ExecStart=/opt/sentinel-dashboard/venv/bin/gunicorn --bind 127.0.0.1:5000 --workers 2 app:app
+ExecStart=/opt/sentinel-dashboard/venv/bin/gunicorn -b 127.0.0.1:5000 app:app
 Restart=on-failure
 RestartSec=10
 
