feat: Add public demo mode
- DEMO_MODE=true enables read-only public access
- No login required, viewer role assigned
- Yellow banner with GitHub link
- Admin features hidden in demo mode
- Great for showcasing dashboard publicly

--- a/deploy/sentinel.service
+++ b/deploy/sentinel.service
@@ -53,6 +53,10 @@ Environment="ALERT_SLACK_USERNAME=C-Sentinel"
 # Optional: override default webhook channel
 # Environment="ALERT_SLACK_CHANNEL=#security-alerts"
 
+# Demo mode (optional - enables read-only public access without login)
+# Useful for showcasing the dashboard publicly
+Environment="DEMO_MODE=false"
+
 # Restart policy
 Restart=on-failure
 RestartSec=5
